Add login and sign in functions

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Propanne/RomainQUADRELLI_6#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.0",
     "mongoose-unique-validator": "^3.0.0"
