--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.0",
-    "mongoose-unique-validator": "^3.0.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose-unique-validator": "^3.0.0",
+    "mult": "^1.1.0",
+    "multer": "^1.4.4",
+    "path": "^0.12.7"
   }
 }
